# spend-control-control-service

./: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 20260524_0001_init.py
app/: main.py
app/api/: routes.py
app/clients/: ai_client.py  expense_client.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py
app/schemas/: ai.py  approvals.py  auth.py  dashboard.py  expenses.py  policy.py
app/services/: auth.py  bootstrap.py  control_plane.py  policy_engine.py
spend_control_shared/: __init__.py  auth.py  responses.py  settings.py
tests/: conftest.py  test_health.py  test_policy_engine.py
